2022-09-03T02:04:48Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2982810728
* notice: last 14d: unq all: 19 53
* notice: prev accum: outdated-unq outdated-all / unq all: 558 2368 / 593 2420
* notice: next accum: outdated-unq outdated-all / unq all: 558 2368 / 593 2421
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-09-02]

2022-09-02T16:26:57Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2980489109
* notice: last 14d: unq all: 19 52
* notice: prev accum: outdated-unq outdated-all / unq all: 558 2368 / 592 2419
* notice: next accum: outdated-unq outdated-all / unq all: 558 2368 / 593 2420
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-02]

2022-09-02T02:02:25Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2976181878
* notice: last 14d: unq all: 19 51
* notice: prev accum: outdated-unq outdated-all / unq all: 558 2368 / 591 2417
* notice: next accum: outdated-unq outdated-all / unq all: 558 2368 / 592 2419
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +5 +7 -0 -0 / 5 7
* notice: removed / changed dates: [] / [2022-09-01]

2022-09-01T16:26:52Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2973313436
* notice: last 14d: unq all: 19 49
* notice: prev accum: outdated-unq outdated-all / unq all: 558 2368 / 588 2413
* notice: next accum: outdated-unq outdated-all / unq all: 558 2368 / 591 2417
* notice: prev exec diff / last date diff / accum: unq all: +3 +4 -0 -0 / +4 +5 -0 -0 / 4 5
* notice: removed / changed dates: [] / [2022-09-01]

2022-09-01T08:26:28Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2970066763
* notice: last 14d: unq all: 17 45