@@ -1,12 +1,7 @@
 {
-  "count": 53,
+  "count": 52,
   "uniques": 19,
   "clones": [
-    {
-      "timestamp": "2022-08-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-21T00:00:00Z",
       "count": 3,
