@@ -1,3 +1,11 @@
+2022-09-04T02:00:19Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2986495037
+* notice: last 14d: unq all: 19 52
+* notice: prev accum: outdated-unq outdated-all / unq all: 558 2368 / 593 2421
+* notice: next accum: outdated-unq outdated-all / unq all: 559 2369 / 593 2421
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-20] / []
+
 2022-09-03T02:04:48Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2982810728
 * notice: last 14d: unq all: 19 53
